--- a/Jsons/tvConfig2.json
+++ b/Jsons/tvConfig2.json
@@ -150,9 +150,9 @@
         "startYear": -13787000000,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": 4242,
-        "endMonth": 4,
-        "endDay": 2,
+        "endYear": -4000000001,
+        "endMonth": 12,
+        "endDay": 31,
         "bgColor": "bbbbbb",
         "textColor": "000000",
         "width": 7,
@@ -164,9 +164,9 @@
         "startYear": -4000000000,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": 4242,
-        "endMonth": 4,
-        "endDay": 2,
+        "endYear": -230000001,
+        "endMonth": 12,
+        "endDay": 31,
         "bgColor": "8FAADC",
         "textColor": "2F5597",
         "width": 7,
@@ -178,9 +178,9 @@
         "startYear": -230000000,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": 4242,
-        "endMonth": 4,
-        "endDay": 2,
+        "endYear": -20000001,
+        "endMonth": 12,
+        "endDay": 31,
         "bgColor": "FF9999",
         "textColor": "843C0C",
         "width": 7,
@@ -192,9 +192,9 @@
         "startYear": -20000000,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": 4242,
-        "endMonth": 4,
-        "endDay": 2,
+        "endYear": -3500001,
+        "endMonth": 12,
+        "endDay": 31,
         "bgColor": "81BB59",
         "textColor": "385723",
         "width": 7,
@@ -206,9 +206,9 @@
         "startYear": -3500000,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": 4242,
-        "endMonth": 4,
-        "endDay": 2,
+        "endYear": -300001,
+        "endMonth": 12,
+        "endDay": 31,
         "bgColor": "FFD966",
         "textColor": "7F6000",
         "width": 7,
@@ -220,9 +220,9 @@
         "startYear": -300000,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": 4242,
-        "endMonth": 4,
-        "endDay": 2,
+        "endYear": -50001,
+        "endMonth": 12,
+        "endDay": 31,
         "bgColor": "888888",
         "textColor": "D9D9D9",
         "width": 7,
@@ -234,9 +234,9 @@
         "startYear": -50000,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": 4242,
-        "endMonth": 4,
-        "endDay": 2,
+        "endYear": -3501,
+        "endMonth": 12,
+        "endDay": 31,
         "bgColor": "999999",
         "textColor": "D9D9D9",
         "width": 7,
@@ -248,9 +248,9 @@
         "startYear": -3500,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": 4242,
-        "endMonth": 4,
-        "endDay": 2,
+        "endYear": 999,
+        "endMonth": 12,
+        "endDay": 31,
         "bgColor": "aaaaaa",
         "textColor": "000000",
         "width": 12,
@@ -262,9 +262,9 @@
         "startYear": 1000,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": 4242,
-        "endMonth": 4,
-        "endDay": 2,
+        "endYear": 1899,
+        "endMonth": 12,
+        "endDay": 31,
         "bgColor": "bbbbbb",
         "textColor": "000000",
         "width": 15,
