Refactor icon atlas generation and update documentation
- Updated SVG file for Donald Trump icon with new dimensions and path data.
- Modified buildIcons_TimeMarks.mjs to support an optional '-all' flag for generating multiple atlas sizes (128x64 by default, with -all generating 128x64, 96x48, 64x32, 32x16).
- Enhanced package.json scripts to include new commands for generating all atlas sizes.
- Updated TOOLS.md documentation to reflect changes in atlas generation commands and their outputs.
- Added .gitattributes to enforce LF line endings for JSON files in the Atlas directory.

--- a/Tools/package.json
+++ b/Tools/package.json
@@ -16,7 +16,9 @@
     "tmconvert": "(node \"svg scripts/recenteresizeformat/transform.mjs\" && echo \"success\") || echo \"failure\"",
     "uisprites": "(node \"svg scripts/buildUiSprite.mjs\" && echo \"success\") || echo \"failure\"",
     "atlas": "(node \"Icons_TimeMarks scripts/buildIcons_TimeMarks.mjs\" && git -C .. add -f Icons_TimeMarks/Atlas && git -C .. commit -m \"update atlas\" && git -C .. push && echo \"success\") || echo \"failure\"",
-    "atlas-n": "node \"Icons_TimeMarks scripts/buildIcons_TimeMarks.mjs\""
+    "atlas-n": "node \"Icons_TimeMarks scripts/buildIcons_TimeMarks.mjs\"",
+    "atlas:all": "(node \"Icons_TimeMarks scripts/buildIcons_TimeMarks.mjs\" -all && git -C .. add -f Icons_TimeMarks/Atlas && git -C .. commit -m \"update atlas\" && git -C .. push && echo \"success\") || echo \"failure\"",
+    "atlas:all-n": "node \"Icons_TimeMarks scripts/buildIcons_TimeMarks.mjs\" -all"
   },
   "devDependencies": {
     "svg-path-commander": "^2.1.11",
