--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "dbtm": "npm --prefix Tools run dbtm",
     "cosmos": "npm --prefix Tools run cosmos",
     "tm": "npm --prefix Tools run tm",
-    "sprite": "npm --prefix Tools run sprite",
+    "ui": "npm --prefix Tools run ui",
     "atlas": "npm --prefix Tools run atlas",
     "atlas:all": "npm --prefix Tools run atlas:all"
   }
