--- a/Jsons/tvConfig2.json
+++ b/Jsons/tvConfig2.json
@@ -6,7 +6,7 @@
         "startYear": -13787000000,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": -4000000000,
+        "endYear": 4242,
         "endMonth": 4,
         "endDay": 2,
         "bgColor": "bbbbbb",
@@ -150,9 +150,9 @@
         "startYear": -13787000000,
         "startMonth": 1,
         "startDay": 1,
-        "endYear": -4000000000,
-        "endMonth": 12,
-        "endDay": 31,
+        "endYear": 4242,
+        "endMonth": 4,
+        "endDay": 2,
         "bgColor": "bbbbbb",
         "textColor": "000000",
         "width": 7,
